--- a/src/app/components/master/master.component.html
+++ b/src/app/components/master/master.component.html
@@ -1,12 +1,28 @@
 <div class="row">
   <div class="col-12 text-center">
     <div class="btn-group">
-      <button type="button" (click)="changeTab('Roles')" class="btn " [ngClass]="currentComponent == 'Roles' ? 'btn-success' : 'btn-primary'" >Roles</button>
-      <button type="button" (click)="changeTab('Designation')" class="btn " [ngClass]="currentComponent == 'Designation' ? 'btn-success' : 'btn-primary'" >Designation</button>
+      <button
+        type="button"
+        (click)="changeTab('Roles')"
+        class="btn"
+        [ngClass]="currentComponent == 'Roles' ? 'btn-success' : 'btn-primary'"
+      >
+        Roles
+      </button>
+      <button
+        type="button"
+        (click)="changeTab('Designation')"
+        class="btn"
+        [ngClass]="
+          currentComponent == 'Designation' ? 'btn-success' : 'btn-primary'
+        "
+      >
+        Designation
+      </button>
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row pt-2">
   <div class="col-12" *ngIf="currentComponent == 'Roles'">
     <app-roles></app-roles>
   </div>
