Add input validation

--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -1,1 +1,170 @@
-<p>client works!</p>
+<div class="row">
+  <div class="col-8">
+    <div class="card">
+      <div class="card-header bg-success">Client List</div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-12">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>Sr No</th>
+                  <th>Company Name</th>
+                  <th>Person Name</th>
+                  <th>Contact Number</th>
+                  <th>City</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                @for (item of clientList; track $index) {
+                <tr>
+                  <td>{{ $index + 1 }}</td>
+                  <td>{{ item.companyName }}</td>
+                  <td>{{ item.contactPersonName }}</td>
+                  <td>{{ item.contactNo }}</td>
+                  <td>{{ item.city }}</td>
+                  <td>
+                    <button class="btn btn-primary" (click)="onEdit(item)">
+                      Edit
+                    </button>
+                    <button
+                      class="btn btn-danger"
+                      (click)="onDelete(item.clientId)"
+                    >
+                      Delete
+                    </button>
+                  </td>
+                </tr>
+                }
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="card">
+      <div class="card-header bg-success">New Client</div>
+      <div class="card-body">
+        <form #form="ngForm">
+          <div class="row">
+            <div class="col-6">
+              <label for="">Person Name</label>
+              <input
+                type="text"
+                #personName="ngModel"
+                minlength="5"
+                required
+                name="contactPersonName"
+                [(ngModel)]="clientObj.contactPersonName"
+                class="form-control"
+              />
+              @if (personName.touched) {
+              <div class="text-danger">
+                @if(personName?.errors?.['required']) {
+                <span>This is Required</span>
+                } @if(personName?.errors?.['minlength']) {
+                <span>Min Length is 5</span>
+                }
+              </div>
+              }
+            </div>
+            <div class="col-6">
+              <label for="">Company Name</label>
+              <input
+                type="text"
+                name="companyName"
+                [(ngModel)]="clientObj.companyName"
+                class="form-control"
+              />
+            </div>
+            <div class="col-6">
+              <label for="">Contact Number</label>
+              <input
+                type="text"
+                name="contactNo"
+                [(ngModel)]="clientObj.contactNo"
+                class="form-control"
+              />
+            </div>
+            <div class="col-6">
+              <label for="">City</label>
+              <input
+                type="text"
+                name="city"
+                [(ngModel)]="clientObj.city"
+                class="form-control"
+              />
+            </div>
+            <div class="col-6">
+              <label for="">Pincode</label>
+              <input
+                type="text"
+                name="pincode"
+                [(ngModel)]="clientObj.pincode"
+                class="form-control"
+              />
+            </div>
+
+            <div class="col-6">
+              <label for="">State</label>
+              <input
+                type="text"
+                name="state"
+                [(ngModel)]="clientObj.state"
+                class="form-control"
+              />
+            </div>
+            <div class="col-6">
+              <label for="">Employee Strength</label>
+              <input
+                type="text"
+                name="employeeStrength"
+                [(ngModel)]="clientObj.employeeStrength"
+                class="form-control"
+              />
+            </div>
+            <div class="col-6">
+              <label for="">GstNo</label>
+              <input
+                type="text"
+                name="gstNo"
+                [(ngModel)]="clientObj.gstNo"
+                class="form-control"
+              />
+            </div>
+            <div class="col-6">
+              <label for="">RegNo</label>
+              <input
+                type="text"
+                name="regNo"
+                [(ngModel)]="clientObj.regNo"
+                class="form-control"
+              />
+            </div>
+            <div class="col-6">
+              <label for="">Address</label>
+              <textarea
+                name="address"
+                [(ngModel)]="clientObj.address"
+                class="form-control"
+              ></textarea>
+            </div>
+          </div>
+          <div class="row pt-2">
+            <div class="col-6 text-center">
+              <button class="btn btn-secondary">Reset</button>
+            </div>
+            <div class="col-6 text-center">
+              <button class="btn btn-success" [disabled]="!form.valid" (click)="onSaveClient()">
+                {{ clientObj.clientId != 0 ? "Update Client" : "Save Client" }}
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
