--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -1,5 +1,17 @@
 <div class="row">
-  @for (item of designationList; track $index) {
+  @if (isLoader) {
+  <div class="col-12 text-center">
+    <div class="spinner-border text-muted"></div>
+    <div class="spinner-border text-primary"></div>
+    <div class="spinner-border text-success"></div>
+    <div class="spinner-border text-info"></div>
+    <div class="spinner-border text-warning"></div>
+    <div class="spinner-border text-danger"></div>
+    <div class="spinner-border text-secondary"></div>
+    <div class="spinner-border text-dark"></div>
+    <div class="spinner-border text-light"></div>
+  </div>
+  } @else { @for (item of designationList; track $index) {
   <div class="col-3">
     <div class="card">
       <div class="card-body">
@@ -10,5 +22,5 @@
       </div>
     </div>
   </div>
-  }
+  } }
 </div>
